[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/player.png" type="Texture" id=2]
[ext_resource path="res://Assets/bangMedium.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Champagne & Limousines Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 54.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI_Container" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 2028.0
margin_bottom = 38.0

[node name="Score_Label" type="HBoxContainer" parent="GUI_Container"]
margin_right = 42.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI_Container/Score_Label"]
margin_right = 42.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="GUI_Container"]
margin_left = 46.0
margin_right = 56.0
margin_bottom = 18.0

[node name="Score_Count" type="Label" parent="GUI_Container/Score"]
margin_right = 10.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First_Life" type="Sprite" parent="GUI_Container"]
position = Vector2( 1960, 5 )
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 2 )

[node name="Second_Life" type="Sprite" parent="GUI_Container"]
position = Vector2( 1980, 5 )
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 2 )

[node name="Third_Life" type="Sprite" parent="GUI_Container"]
position = Vector2( 2000, 5 )
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 2 )

[node name="enemy_explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="explosion_timer" type="Timer" parent="."]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
